[metadata]
name = emanifest
version = 0.0.6
author = William Nicholas
author_email = nicholas.william@epa.gov
description = An API utility wrapper for accessing the eManifest hazardous waste tracking system maintained by the US Environmental Protection Agency
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/USEPA/e-manifest/emanifest-py
project_urls =
    Bug Tracker = https://github.com/USEPA/e-manifest/issues

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src